# k8s-restart-notify

./: Cargo.toml  Dockerfile  LICENSE  README.md
deployment/: example.yaml
deployment/kustomize_example/: README.md
deployment/kustomize_example/base/: cluster_role.yaml  cluster_role_binding.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  sa.yaml
deployment/kustomize_example/dev/: kustomization.yaml  sa.yaml
src/: kubernetes.rs  main.rs  message.rs  slack.rs
