[package]
name = "k8s-restart-notify"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
env_logger = "0.11.7"
futures = "0.3.31"
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }
kube = { version = "0.99.0", features = ["runtime"] }
log = "0.4.26"
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
wildmatch = "2.4.0"
